# autotune-ai

./: .env.example  .gitignore  .vercelignore  AUTOTUNE_AI_ARCHITECTURE.md  Makefile  README.md  package.json  pnpm-workspace.yaml  vercel.json
.github/workflows/: ci.yml  release.yml
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  garage.tsx  index.tsx  login.tsx  settings.tsx
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  utils.ts
docs/: DEPLOY.md  FINANCIAL_MODEL.md  PITCH.md  ROADMAP.md
docs/adr/: 0001-choose-fastapi-and-python.md  0002-claude-as-primary-llm.md  0003-simulation-first-recommendations.md
infra/docker/: docker-compose.minimal.yml  docker-compose.yml  otel-collector.yaml
infra/docker/initdb/: 01-extensions.sql
infra/k8s/base/: api-deployment.yaml  config.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  (+2 more)
infra/terraform/: README.md
scripts/: dev.sh  gen-signing-key.py  push-github.sh  run-local.sh  sign-recommendation.py  telemetry-emitter.py
services/analysis-worker/: Dockerfile  pyproject.toml
services/analysis-worker/worker/: __init__.py  celery_app.py  config.py  db.py
services/analysis-worker/worker/pipeline/: analyst_fanout.py  detector.py  ecu_sim.py  reader.py  report_writer.py
services/analysis-worker/worker/tasks/: embed.py  scan.py  sim.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py  middleware.py
services/api/app/ai/: __init__.py  agents.py  llm.py  orchestrator.py  orchestrator2.py  prompts.py  rag.py  tasks.py  tools.py
services/api/app/ai/eval/: golden.json  run.py
services/api/app/api/: __init__.py
services/api/app/api/routes/: ai.py  analytics.py  auth.py  billing.py  bridges.py  health.py  mfa.py  recommendations.py  reports.py  scans.py  telemetry.py  vehicles.py
services/api/app/core/: config.py  db.py  deps.py  logging.py  mfa.py  policy.py  security.py
services/api/app/ecu/: __init__.py  a2l.py  checksums.py
services/api/app/kb/: __init__.py  chunker.py  embedder.py  ingest.py
services/api/app/models/: __init__.py  _mixins.py  audit.py  bridge.py  calibration.py  kb.py  organization.py  rbac.py  scan.py  telemetry.py  user.py  vehicle.py
services/api/app/schemas/: __init__.py  auth.py  recommendation.py  scan.py  telemetry.py  vehicle.py
services/api/app/scripts/: ingest_seed_kb.py  seed.py
services/api/migrations/: env.py  script.py.mako
services/api/migrations/versions/: 20260101_0001_initial.py
services/api/tests/: test_a2l.py  test_mfa.py  test_policy.py  test_security.py
(+25 files in other folders)
