[tool.poetry]
name = "autotune-api"
version = "0.1.0"
description = "AutoTune AI — REST + WebSocket API gateway"
authors = ["AutoTune AI <eng@autotune.ai>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.29.0"
alembic = "^1.13.3"
redis = "^5.1.1"
httpx = "^0.27.2"
anthropic = "^0.39.0"
celery = { extras = ["redis"], version = "^5.4.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }
pynacl = "^1.5.0"          # ed25519 signing
qdrant-client = "^1.12.1"
neo4j = "^5.25.0"
boto3 = "^1.35.0"
prometheus-fastapi-instrumentator = "^7.0.0"
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
structlog = "^24.4.0"
slowapi = "^0.1.9"
email-validator = "^2.2.0"
python-multipart = "^0.0.12"
websockets = "^13.1"
stripe = "^11.1.0"
autotune-schemas = { path = "../../packages/shared-schemas/python", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
httpx = "^0.27.2"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "ASYNC", "S", "N"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
